@@ -65,7 +65,7 @@ class _LibraryFileChooserDialog(file_chooser_base_dialog._BaseFileChooserDialog)
             paths = [ path.decode('utf-8') for path in paths ]
             if self._collection_button.get_active():
                 prefs['auto add books into collections'] = True
-                collection_name = self._comboentry.get_active_text()
+                collection_name = self._comboentry.get_active_text().decode('utf-8')
 
                 if not collection_name: # No empty-string names.
                     collection_name = None
